--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,68 @@
 # created with git log --stat=76 -M -C -500|fmt -sct -w80
 
-commit bb98979dcf5de13d065c0e1d8b1d03d82b6c5244
-Merge: 7078f1a4 c8942a54
+commit c639b5a8c2ae47c85a0c3f5d983fea1e40e3ab53
+Merge: c8942a54 ae2d1703
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sat Jan 23 01:09:31 2021 +0100
+Date:   Sun Jan 24 13:59:27 2021 +0100
 
-    Merge branch 'icewm-1-4-BRANCH'
+    Merge remote-tracking branch 'upstream/icewm-1-4-BRANCH' into
+    icewm-1-4-BRANCH
+
+commit ae2d17030fd86a922649c9ab975a0df959e1593e
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sun Jan 24 13:41:29 2021 +0100
+
+    Moving towards 2.1.1.
+
+ VERSION      | 2 +-
+ configure.ac | 8 ++++----
+ 2 files changed, 5 insertions(+), 5 deletions(-)
+
+commit d63426a0dafa5307790144e71dcbadc13f87c6db
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sun Jan 24 13:40:03 2021 +0100
+
+    Detail.
+
+ man/icewm.pod | 4 ++++
+ 1 file changed, 4 insertions(+)
+
+commit 699a4c5ec86c2af6e4db9c899ad9f90210f5a421
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sat Jan 23 18:50:22 2021 +0100
+
+    Improve the isValid test for Imlib2 custom cursors.
+
+ src/ycursor.cc | 2 +-
+ 1 file changed, 1 insertion(+), 1 deletion(-)
+
+commit 501cd852918dcdf21e4dddc4abf50d2d0f410cf0
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sat Jan 23 18:22:44 2021 +0100
+
+    Fix issue #542 for texturing background of task pane.
+
+ src/wmtaskbar.cc | 1 +
+ 1 file changed, 1 insertion(+)
+
+commit 1d28361a69d773ba0d026119ff197d38900eac0a
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sat Jan 23 16:02:21 2021 +0100
+
+    Don't unarm menu popup buttons for issue #527.
+
+ src/ybutton.cc | 9 +++++++--
+ 1 file changed, 7 insertions(+), 2 deletions(-)
+
+commit a0a85793c142a56ab7bf42e1a1d4023d36849b52
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sat Jan 23 15:54:50 2021 +0100
+
+    Provide drawable context when creating pixmap cursors with Imlib2 for
+    issue #541.
+
+ src/ycursor.cc | 3 ++-
+ 1 file changed, 2 insertions(+), 1 deletion(-)
 
 commit c8942a542106429adb5012aeacdef1521fcd3d13
 Merge: eee57659 fe2600cd
@@ -124,67 +181,6 @@ Date:   Wed Jan 6 11:20:38 2021 +0100
  src/wmswitch.cc | 34 +++++++++++++++++++++++++++++-----
  src/wmswitch.h  |  2 ++
  2 files changed, 31 insertions(+), 5 deletions(-)
-
-commit 7078f1a4fd047234792a2a1fbdd45a22aa57a242
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sat Jan 2 23:44:07 2021 +0100
-
-    Prepare 2.0.1 release
-
- AUTHORS      |  16 +-
- ChangeLog    | 563 ++++++++++++++++++++++++++++---------------------------
- NEWS         | 103 +++++-----
- README.md    |  36 ++--
- RELEASE.md   |   2 +-
- VERSION      |   2 +-
- configure.ac |  12 +-
- po/ar.po     |  34 ++--
- po/be.po     |  34 ++--
- po/bg.po     |  34 ++--
- po/ca.po     |  38 ++--
- po/cs.po     |  38 ++--
- po/da.po     |  34 ++--
- po/de.po     |  34 ++--
- po/el.po     |  34 ++--
- po/en.po     |  34 ++--
- po/es.po     |  34 ++--
- po/fi.po     |  34 ++--
- po/fr.po     |  34 ++--
- po/he.po     |  34 ++--
- po/hr.po     |  34 ++--
- po/hu.po     |  34 ++--
- po/icewm.pot |  36 ++--
- po/id.po     |  34 ++--
- po/it.po     |  34 ++--
- po/ja.po     |  38 ++--
- po/ko.po     |  34 ++--
- po/lt.po     |  34 ++--
- po/lv.po     |  34 ++--
- po/mk.po     |  34 ++--
- po/nb.po     |  34 ++--
- po/nl.po     |  38 ++--
- po/no.po     |  34 ++--
- po/pl.po     |  34 ++--
- po/pt.po     |  34 ++--
- po/pt_BR.po  |  34 ++--
- po/ro.po     |  34 ++--
- po/ru.po     |  34 ++--
- po/sk.po     |  38 ++--
- po/sl.po     |  34 ++--
- po/sv.po     |  34 ++--
- po/tr.po     |  34 ++--
- po/uk.po     |  34 ++--
- po/vi.po     |  34 ++--
- po/zh_CN.po  |  34 ++--
- po/zh_TW.po  |  34 ++--
- 46 files changed, 1044 insertions(+), 1038 deletions(-)
-
-commit a43eef27fbbd0502a700d189a90dc34e70286f5d
-Merge: 3b95d791 eee57659
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sat Jan 2 23:38:25 2021 +0100
-
-    Merge branch 'icewm-1-4-BRANCH'
 
 commit eee57659fd43a1643228fb61daae999397797ee7
 Merge: 5069b5f7 85977c3c
@@ -406,67 +402,6 @@ Date:   Mon Dec 14 01:31:39 2020 +0000
 
  po/ja.po | 12 ++++++------
  1 file changed, 6 insertions(+), 6 deletions(-)
-
-commit 3b95d79143fdb8336a2519c7119fad02b3484836
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Mon Dec 14 02:18:46 2020 +0100
-
-    Prepare 2.0.0 release
-
- AUTHORS      |    3 +-
- ChangeLog    | 9159 +++++++++++++++++++++++++++---------------------------
- NEWS         |  330 +-
- README.md    |   36 +-
- RELEASE.md   |    2 +-
- VERSION      |    2 +-
- configure.ac |   10 +-
- po/ar.po     |    2 +-
- po/be.po     |    2 +-
- po/bg.po     |    2 +-
- po/ca.po     |    2 +-
- po/cs.po     |    2 +-
- po/da.po     |    2 +-
- po/de.po     |    2 +-
- po/el.po     |    2 +-
- po/en.po     |    2 +-
- po/es.po     |    2 +-
- po/fi.po     |    2 +-
- po/fr.po     |    2 +-
- po/he.po     |    2 +-
- po/hr.po     |    2 +-
- po/hu.po     |    2 +-
- po/icewm.pot |    4 +-
- po/id.po     |    2 +-
- po/it.po     |    2 +-
- po/ja.po     |    2 +-
- po/ko.po     |    2 +-
- po/lt.po     |    2 +-
- po/lv.po     |    2 +-
- po/mk.po     |    2 +-
- po/nb.po     |    2 +-
- po/nl.po     |    2 +-
- po/no.po     |    2 +-
- po/pl.po     |    2 +-
- po/pt.po     |    2 +-
- po/pt_BR.po  |    2 +-
- po/ro.po     |    2 +-
- po/ru.po     |    2 +-
- po/sk.po     |    2 +-
- po/sl.po     |    2 +-
- po/sv.po     |    2 +-
- po/tr.po     |    2 +-
- po/uk.po     |    2 +-
- po/vi.po     |    2 +-
- po/zh_CN.po  |    2 +-
- po/zh_TW.po  |    2 +-
- 46 files changed, 4732 insertions(+), 4890 deletions(-)
-
-commit 4e55c22062b37f1a6071a91a0f4b9247d08e5093
-Merge: 84abbd6a 5069b5f7
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Mon Dec 14 02:11:22 2020 +0100
-
-    Merge branch 'icewm-1-4-BRANCH'
 
 commit 5069b5f71dc607789be16966017c6738a8e2495e
 Merge: 8c6ed08b 869a96fa
@@ -1150,67 +1085,6 @@ Date:   Thu Nov 12 19:09:27 2020 +0100
  src/ylistbox.cc | 14 ++++++--------
  1 file changed, 6 insertions(+), 8 deletions(-)
 
-commit 84abbd6ae374008e1b16fc62011874b136bad268
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Tue Nov 10 00:54:09 2020 +0100
-
-    Prepare 1.9.2 release
-
- AUTHORS      |   2 +-
- ChangeLog    | 320 +++++++++++++++++++++++++++++++++++--------------------
- NEWS         | 148 ++++---------------------
- README.md    |  36 +++----
- RELEASE.md   |   2 +-
- VERSION      |   2 +-
- configure.ac |  10 +-
- po/ar.po     |   2 +-
- po/be.po     |   2 +-
- po/bg.po     |   2 +-
- po/ca.po     |   2 +-
- po/cs.po     |   2 +-
- po/da.po     |   2 +-
- po/de.po     |   2 +-
- po/el.po     |   2 +-
- po/en.po     |   2 +-
- po/es.po     |   2 +-
- po/fi.po     |   2 +-
- po/fr.po     |   2 +-
- po/he.po     |   2 +-
- po/hr.po     |   2 +-
- po/hu.po     |   2 +-
- po/icewm.pot |   4 +-
- po/id.po     |   2 +-
- po/it.po     |   2 +-
- po/ja.po     |   2 +-
- po/ko.po     |   2 +-
- po/lt.po     |   2 +-
- po/lv.po     |   2 +-
- po/mk.po     |   2 +-
- po/nb.po     |   2 +-
- po/nl.po     |   2 +-
- po/no.po     |   2 +-
- po/pl.po     |   2 +-
- po/pt.po     |   2 +-
- po/pt_BR.po  |   2 +-
- po/ro.po     |   2 +-
- po/ru.po     |   2 +-
- po/sk.po     |   2 +-
- po/sl.po     |   2 +-
- po/sv.po     |   2 +-
- po/tr.po     |   2 +-
- po/uk.po     |   2 +-
- po/vi.po     |   2 +-
- po/zh_CN.po  |   2 +-
- po/zh_TW.po  |   2 +-
- 46 files changed, 293 insertions(+), 307 deletions(-)
-
-commit 8af9740bffca94ffa08ff57c1b1f2677243f2c22
-Merge: a7e868d6 8c6ed08b
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Tue Nov 10 00:46:54 2020 +0100
-
-    Merge branch 'icewm-1-4-BRANCH'
-
 commit 8c6ed08b2fdf9a68bc8b5d6ae7b51a18a2a3b906
 Merge: 61b47eb7 15f49b18
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
@@ -1353,67 +1227,6 @@ Date:   Sun Nov 8 16:51:26 2020 +0100
 
  src/aclock.cc | 1 -
  1 file changed, 1 deletion(-)
-
-commit a7e868d646639aaaf4bd57a56de2fc2fd364b2bb
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Thu Nov 5 00:51:27 2020 +0100
-
-    Prepare 1.9.1 release
-
- AUTHORS      |   2 +-
- ChangeLog    | 470 +++++++++++++++++++++++++++++++------------------------
- NEWS         | 148 ++++--------------
- README.md    |  38 ++---
- RELEASE.md   |   2 +-
- VERSION      |   2 +-
- configure.ac |  10 +-
- po/ar.po     |   2 +-
- po/be.po     |   2 +-
- po/bg.po     |   2 +-
- po/ca.po     |   2 +-
- po/cs.po     |   2 +-
- po/da.po     |   2 +-
- po/de.po     |   2 +-
- po/el.po     |   2 +-
- po/en.po     |   2 +-
- po/es.po     |   2 +-
- po/fi.po     |   2 +-
- po/fr.po     |   2 +-
- po/he.po     |   2 +-
- po/hr.po     |   2 +-
- po/hu.po     |   2 +-
- po/icewm.pot |   4 +-
- po/id.po     |   2 +-
- po/it.po     |   2 +-
- po/ja.po     |   2 +-
- po/ko.po     |   2 +-
- po/lt.po     |   2 +-
- po/lv.po     |   2 +-
- po/mk.po     |   2 +-
- po/nb.po     |   2 +-
- po/nl.po     |   2 +-
- po/no.po     |   2 +-
- po/pl.po     |   2 +-
- po/pt.po     |   2 +-
- po/pt_BR.po  |   2 +-
- po/ro.po     |   2 +-
- po/ru.po     |   2 +-
- po/sk.po     |   2 +-
- po/sl.po     |   2 +-
- po/sv.po     |   2 +-
- po/tr.po     |   2 +-
- po/uk.po     |   2 +-
- po/vi.po     |   2 +-
- po/zh_CN.po  |   2 +-
- po/zh_TW.po  |   2 +-
- 46 files changed, 361 insertions(+), 391 deletions(-)
-
-commit 5bf1b4817586bce00f696f21e711e6132ae9f9a9
-Merge: 29abd06a 61b47eb7
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Thu Nov 5 00:42:08 2020 +0100
-
-    Merge branch 'icewm-1-4-BRANCH'
 
 commit 61b47eb7e9545859f743431db85e940fd0f02386
 Merge: 813dd473 d48c1b46
@@ -1617,67 +1430,6 @@ Date:   Fri Oct 30 19:22:32 2020 +0100
  VERSION      |    2 +-
  configure.ac |   10 +-
  5 files changed, 4597 insertions(+), 4328 deletions(-)
-
-commit 29abd06add8b047c20176d44de6ba3bd84161f78
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Thu Oct 29 20:28:57 2020 +0100
-
-    Prepare 1.9.0 release
-
- AUTHORS      |   22 +-
- ChangeLog    | 8529 ++++++++++++++++++++++++++++--------------------------
- NEWS         |  362 ++-
- README.md    |    2 +-
- RELEASE.md   |    2 +-
- VERSION      |    2 +-
- configure.ac |   10 +-
- po/ar.po     |    2 +-
- po/be.po     |    2 +-
- po/bg.po     |    2 +-
- po/ca.po     |    2 +-
- po/cs.po     |    2 +-
- po/da.po     |    2 +-
- po/de.po     |    2 +-
- po/el.po     |    2 +-
- po/en.po     |    2 +-
- po/es.po     |    2 +-
- po/fi.po     |    2 +-
- po/fr.po     |    2 +-
- po/he.po     |    2 +-
- po/hr.po     |    2 +-
- po/hu.po     |    2 +-
- po/icewm.pot |    4 +-
- po/id.po     |    2 +-
- po/it.po     |    2 +-
- po/ja.po     |    2 +-
- po/ko.po     |    2 +-
- po/lt.po     |    2 +-
- po/lv.po     |    2 +-
- po/mk.po     |    2 +-
- po/nb.po     |    2 +-
- po/nl.po     |    2 +-
- po/no.po     |    2 +-
- po/pl.po     |    2 +-
- po/pt.po     |    2 +-
- po/pt_BR.po  |    2 +-
- po/ro.po     |    2 +-
- po/ru.po     |    2 +-
- po/sk.po     |    2 +-
- po/sl.po     |    2 +-
- po/sv.po     |    2 +-
- po/tr.po     |    2 +-
- po/uk.po     |    2 +-
- po/vi.po     |    2 +-
- po/zh_CN.po  |    2 +-
- po/zh_TW.po  |    2 +-
- 46 files changed, 4639 insertions(+), 4370 deletions(-)
-
-commit 4ea1941841189fc119e6640f50516c8267c0c895
-Merge: 6554e52f 813dd473
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Thu Oct 29 20:21:16 2020 +0100
-
-    Merge branch 'icewm-1-4-BRANCH'
 
 commit 813dd4736a185b740a0e0db134ead9fada9c0412
 Merge: 31304553 d1e7a8f8
@@ -2590,26 +2342,6 @@ Date:   Thu Sep 17 21:30:28 2020 +0200
  configure.ac |   10 +-
  7 files changed, 4262 insertions(+), 4335 deletions(-)
 
-commit 6554e52fb991ffa5a4f9bcc0d3a1bd219b310e63
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Thu Sep 17 02:08:26 2020 +0200
-
-    Prepare 1.8.3 release bis
-
- AUTHORS      |   2 +-
- ChangeLog    | 122 +++++++++++++++++++++++++++++++++++--------------------
- NEWS         |  11 +++--
- README.md    |   2 +-
- configure.ac |   4 +-
- 5 files changed, 90 insertions(+), 51 deletions(-)
-
-commit 6bc8d04acb290f764994ad56709aa59becccc7b9
-Merge: 57a0569a 31304553
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Thu Sep 17 02:03:11 2020 +0200
-
-    Merge branch 'icewm-1-4-BRANCH'
-
 commit 31304553f5870c6d50b6941347efc23acb1876e1
 Merge: 0bb305af 5cceaaaa
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
@@ -2626,67 +2358,6 @@ Date:   Thu Sep 17 01:40:49 2020 +0200
 
  src/yfileio.cc | 18 ++++++++++--------
  1 file changed, 10 insertions(+), 8 deletions(-)
-
-commit 57a0569ae62df90f6ff2569c735f54a6601966a2
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Wed Sep 16 23:36:14 2020 +0200
-
-    Prepare 1.8.3 release
-
- AUTHORS      |  19 +-
- ChangeLog    | 919 +++++++++++++++++++++++++++++--------------------------
- NEWS         | 201 +++++-------
- README.md    |  36 +--
- RELEASE.md   |   2 +-
- VERSION      |   2 +-
- configure.ac |  10 +-
- po/ar.po     |  14 +-
- po/be.po     |  14 +-
- po/bg.po     |  14 +-
- po/ca.po     |  14 +-
- po/cs.po     |  14 +-
- po/da.po     |  14 +-
- po/de.po     |  14 +-
- po/el.po     |  14 +-
- po/en.po     |  14 +-
- po/es.po     |  14 +-
- po/fi.po     |  14 +-
- po/fr.po     |  14 +-
- po/he.po     |  14 +-
- po/hr.po     |  14 +-
- po/hu.po     |  14 +-
- po/icewm.pot |  16 +-
- po/id.po     |  14 +-
- po/it.po     |  14 +-
- po/ja.po     |  14 +-
- po/ko.po     |  14 +-
- po/lt.po     |  14 +-
- po/lv.po     |  14 +-
- po/mk.po     |  14 +-
- po/nb.po     |  14 +-
- po/nl.po     |  14 +-
- po/no.po     |  14 +-
- po/pl.po     |  14 +-
- po/pt.po     |  14 +-
- po/pt_BR.po  |  14 +-
- po/ro.po     |  14 +-
- po/ru.po     |  14 +-
- po/sk.po     |  14 +-
- po/sl.po     |  14 +-
- po/sv.po     |  14 +-
- po/tr.po     |  14 +-
- po/uk.po     |  14 +-
- po/vi.po     |  14 +-
- po/zh_CN.po  |  14 +-
- po/zh_TW.po  |  14 +-
- 46 files changed, 884 insertions(+), 853 deletions(-)
-
-commit 1d8e030b12a35676308e1e57e2ae1acf3dd41231
-Merge: 4f3c2fc9 0bb305af
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Wed Sep 16 23:25:20 2020 +0200
-
-    Merge branch 'icewm-1-4-BRANCH'
 
 commit 0bb305afe4be0506fdc2c725abf8f0ef0c6c1c48
 Merge: d8b6c997 8cdd5da5
@@ -3043,67 +2714,6 @@ Date:   Tue Sep 8 21:44:21 2020 +0200
  src/movesize.cc | 4 ++++
  src/wmframe.h   | 2 +-
  2 files changed, 5 insertions(+), 1 deletion(-)
-
-commit 4f3c2fc9b5df9aa2b9e5c9726a0a7e9a15bfe317
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Tue Sep 8 00:55:57 2020 +0200
-
-    Prepare 1.8.2 release
-
- AUTHORS      |    3 +-
- ChangeLog    | 1017 ++++++++++++++++++++++++++----------------------------
- NEWS         |  128 +++----
- README.md    |   38 +-
- RELEASE.md   |    2 +-
- VERSION      |    2 +-
- configure.ac |   10 +-
- po/ar.po     |  118 +++----
- po/be.po     |  118 +++----
- po/bg.po     |  118 +++----
- po/ca.po     |  118 +++----
- po/cs.po     |  118 +++----
- po/da.po     |  118 +++----
- po/de.po     |  118 +++----
- po/el.po     |  118 +++----
- po/en.po     |  118 +++----
- po/es.po     |  118 +++----
- po/fi.po     |  118 +++----
- po/fr.po     |  118 +++----
- po/he.po     |  118 +++----
- po/hr.po     |  118 +++----
- po/hu.po     |  118 +++----
- po/icewm.pot |  120 +++----
- po/id.po     |  118 +++----
- po/it.po     |  118 +++----
- po/ja.po     |  118 +++----
- po/ko.po     |  118 +++----
- po/lt.po     |  118 +++----
- po/lv.po     |  118 +++----
- po/mk.po     |  118 +++----
- po/nb.po     |  118 +++----
- po/nl.po     |  118 +++----
- po/no.po     |  118 +++----
- po/pl.po     |  118 +++----
- po/pt.po     |  432 +++++++++++------------
- po/pt_BR.po  |  118 +++----
- po/ro.po     |  118 +++----
- po/ru.po     |  118 +++----
- po/sk.po     |  118 +++----
- po/sl.po     |  118 +++----
- po/sv.po     |  118 +++----
- po/tr.po     |  118 +++----
- po/uk.po     |  118 +++----
- po/vi.po     |  118 +++----
- po/zh_CN.po  |  118 +++----
- po/zh_TW.po  |  118 +++----
- 46 files changed, 3048 insertions(+), 3070 deletions(-)
-
-commit e277ad96bcdf70b8473e9daee1e337876660bc71
-Merge: cd96c1d5 d8b6c997
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Tue Sep 8 00:22:21 2020 +0200
-
-    Merge branch 'icewm-1-4-BRANCH'
 
 commit d8b6c99794a78d3c26466fbdf5ae76dd9a9bdabb
 Merge: b0bf123a 3749a355
@@ -3550,66 +3160,6 @@ Date:   Mon Aug 31 18:59:15 2020 +0200
  src/wmabout.cc | 2 +-
  2 files changed, 2 insertions(+), 2 deletions(-)
 
-commit cd96c1d58f1ce67b11279126f639fbe93da5268b
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Mon Aug 31 00:17:56 2020 +0200
-
-    Prepare 1.8.1 release
-
- AUTHORS      |   6 +-
- ChangeLog    | 798 ++++++++++++++++++++++++++++++-------------------------
- NEWS         | 122 ++++-----
- README.md    |  36 +--
- RELEASE.md   |   2 +-
- VERSION      |   2 +-
- configure.ac |  10 +-
- po/ar.po     |  28 +-
- po/be.po     |  28 +-
- po/bg.po     |  28 +-
- po/ca.po     |  28 +-
- po/cs.po     |  28 +-
- po/da.po     |  28 +-
- po/de.po     |  28 +-
- po/el.po     |  28 +-
- po/en.po     |  28 +-
- po/es.po     |  28 +-
- po/fi.po     |  28 +-
- po/fr.po     |  28 +-
- po/he.po     |  28 +-
- po/hr.po     |  28 +-
- po/hu.po     |  28 +-
- po/icewm.pot |  30 +--
- po/id.po     |  28 +-
- po/it.po     |  28 +-
- po/ja.po     |  28 +-
- po/ko.po     |  28 +-
- po/lt.po     |  28 +-
- po/lv.po     |  28 +-
- po/mk.po     |  28 +-
- po/nb.po     |  28 +-
- po/nl.po     |  28 +-
- po/no.po     |  28 +-
- po/pl.po     |  28 +-
- po/pt_BR.po  |  28 +-
- po/ro.po     |  28 +-
- po/ru.po     |  28 +-
- po/sk.po     |  28 +-
- po/sl.po     |  28 +-
- po/sv.po     |  28 +-
- po/tr.po     |  28 +-
- po/uk.po     |  28 +-
- po/vi.po     |  28 +-
- po/zh_CN.po  |  28 +-
- po/zh_TW.po  |  28 +-
- 45 files changed, 1041 insertions(+), 1001 deletions(-)
-
-commit d647b3e3977506d9488a7cce22567939df396aa4
-Merge: b8790433 b0bf123a
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Mon Aug 31 00:06:13 2020 +0200
-
-    Merge branch 'icewm-1-4-BRANCH'
-
 commit b0bf123a680cca69aa3827f6bfb77f9ee7ff1dbb
 Merge: 75fc965b 7e8c5927
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
@@ -3989,66 +3539,6 @@ Date:   Tue Aug 25 11:02:29 2020 +0000
 
  po/pt.po | 2377 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
  1 file changed, 2377 insertions(+)
-
-commit b87904338757f3c46e5b88552291cf2bd353f38d
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Tue Aug 25 02:18:03 2020 +0200
-
-    Prepare 1.8.0 release
-
- AUTHORS      |   26 +-
- ChangeLog    | 8531 +++++++++++++++++++++++++++---------------------------
- NEWS         |  Bin 26387 -> 37084 bytes
- README.md    |   36 +-
- RELEASE.md   |    2 +-
- VERSION      |    2 +-
- configure.ac |   10 +-
- po/ar.po     |    2 +-
- po/be.po     |    2 +-
- po/bg.po     |    2 +-
- po/ca.po     |    2 +-
- po/cs.po     |    2 +-
- po/da.po     |    2 +-
- po/de.po     |    2 +-
- po/el.po     |    2 +-
- po/en.po     |    2 +-
- po/es.po     |    2 +-
- po/fi.po     |    2 +-
- po/fr.po     |    2 +-
- po/he.po     |    2 +-
- po/hr.po     |    2 +-
- po/hu.po     |    2 +-
- po/icewm.pot |    4 +-
- po/id.po     |    2 +-
- po/it.po     |    2 +-
- po/ja.po     |    2 +-
- po/ko.po     |    2 +-
- po/lt.po     |    2 +-
- po/lv.po     |    2 +-
- po/mk.po     |    2 +-
- po/nb.po     |    2 +-
- po/nl.po     |    2 +-
- po/no.po     |    2 +-
- po/pl.po     |    2 +-
- po/pt_BR.po  |    2 +-
- po/ro.po     |    2 +-
- po/ru.po     |    2 +-
- po/sk.po     |    2 +-
- po/sl.po     |    2 +-
- po/sv.po     |    2 +-
- po/tr.po     |    2 +-
- po/uk.po     |    2 +-
- po/vi.po     |    2 +-
- po/zh_CN.po  |    2 +-
- po/zh_TW.po  |    2 +-
- 45 files changed, 4348 insertions(+), 4337 deletions(-)
-
-commit 22988880bcb0ca363a84a5decacac93602242d75
-Merge: 75ba6095 75fc965b
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Tue Aug 25 02:09:18 2020 +0200
-
-    Merge branch 'icewm-1-4-BRANCH'
 
 commit 75fc965b05864d70ccd8469ba03ef5f57ab8ad93
 Merge: 1a8f4336 0ecbfa3c
@@ -5853,66 +5343,6 @@ Date:   Sat Jul 4 18:46:25 2020 +0000
  po/de.po | 22 +++++-----------------
  1 file changed, 5 insertions(+), 17 deletions(-)
 
-commit 75ba6095192ba54bdd5fba8ca19a4bf9ba1bcd18
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Jul 12 20:03:50 2020 +0200
-
-    Prepare 1.7.0 release
-
- AUTHORS      |   12 +-
- ChangeLog    | 8171 ++++++++++++++++++++++++++++--------------------------
- NEWS         |  Bin 29248 -> 26387 bytes
- README.md    |   36 +-
- RELEASE.md   |    2 +-
- VERSION      |    2 +-
- configure.ac |   10 +-
- po/ar.po     |    2 +-
- po/be.po     |    2 +-
- po/bg.po     |    2 +-
- po/ca.po     |    2 +-
- po/cs.po     |    2 +-
- po/da.po     |    2 +-
- po/de.po     |    2 +-
- po/el.po     |    2 +-
- po/en.po     |    2 +-
- po/es.po     |    2 +-
- po/fi.po     |    2 +-
- po/fr.po     |    2 +-
- po/he.po     |    2 +-
- po/hr.po     |    2 +-
- po/hu.po     |    2 +-
- po/icewm.pot |    4 +-
- po/id.po     |    2 +-
- po/it.po     |    2 +-
- po/ja.po     |    2 +-
- po/ko.po     |    2 +-
- po/lt.po     |    2 +-
- po/lv.po     |    2 +-
- po/mk.po     |    2 +-
- po/nb.po     |    2 +-
- po/nl.po     |    2 +-
- po/no.po     |    2 +-
- po/pl.po     |    2 +-
- po/pt_BR.po  |    2 +-
- po/ro.po     |    2 +-
- po/ru.po     |    2 +-
- po/sk.po     |    2 +-
- po/sl.po     |    2 +-
- po/sv.po     |    2 +-
- po/tr.po     |    2 +-
- po/uk.po     |    2 +-
- po/vi.po     |    2 +-
- po/zh_CN.po  |    2 +-
- po/zh_TW.po  |    2 +-
- 45 files changed, 4326 insertions(+), 3985 deletions(-)
-
-commit da559935c3d27b60ee0e8fed97d27fbc332c0506
-Merge: 70dadbf4 1a8f4336
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Jul 12 19:58:41 2020 +0200
-
-    Merge branch 'icewm-1-4-BRANCH'
-
 commit 1a8f433642b62f0c27a52f3e9c1e13a933d4a4a9
 Merge: 6c103076 f5aa6146
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
@@ -6338,3 +5768,240 @@ Date:   Tue Jul 7 18:27:44 2020 +0200
  po/zh_CN.po  | 242 ++++++++++++++++++++++++++++---------------------------
  po/zh_TW.po  | 242 ++++++++++++++++++++++++++++---------------------------
  38 files changed, 4632 insertions(+), 4447 deletions(-)
+
+commit 85cbd1645c86f93e5c83d72575216d616fddbc12
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Jul 7 18:27:00 2020 +0200
+
+    Replace pstring and ustring by mstring. Remove pstring and ustring.
+
+ src/acpustatus.cc |  2 +-
+ src/atasks.cc     |  2 +-
+ src/browse.cc     |  2 +-
+ src/iceicon.cc    |  2 +-
+ src/icelist.cc    |  6 +++---
+ src/iceview.cc    |  2 +-
+ src/mstring.h     |  2 --
+ src/obj.h         |  8 ++++----
+ src/objbar.cc     |  4 ++--
+ src/objbar.h      |  4 ++--
+ src/objmenu.h     |  2 +-
+ src/themes.cc     | 24 ++++++++++++------------
+ src/themes.h      | 10 +++++-----
+ src/udir.cc       |  6 +++---
+ src/udir.h        | 14 +++++++-------
+ src/upath.cc      |  8 ++++----
+ src/upath.h       | 21 ++++++++++-----------
+ src/wmabout.cc    |  4 ++--
+ src/wmclient.cc   |  2 +-
+ src/wmclient.h    | 20 ++++++++++----------
+ src/wmconfig.cc   |  2 +-
+ src/wmdialog.cc   |  2 +-
+ src/wmdialog.h    |  2 +-
+ src/wmframe.cc    | 14 +++++++-------
+ src/wmframe.h     |  6 +++---
+ src/wmmenu.cc     |  6 +++---
+ src/wmminiicon.cc |  2 +-
+ src/wmoption.cc   | 10 +++++-----
+ src/wmoption.h    | 16 ++++++++--------
+ src/wmprog.cc     | 16 ++++++++--------
+ src/wmprog.h      | 10 +++++-----
+ src/wmsession.cc  | 18 +++++++++---------
+ src/wmsession.h   | 16 ++++++++--------
+ src/wmstatus.cc   | 14 +++++++-------
+ src/wmstatus.h    | 16 ++++++++--------
+ src/wmswitch.cc   | 10 +++++-----
+ src/wmswitch.h    |  2 +-
+ src/wmtitle.cc    |  6 +++---
+ src/wmwinlist.cc  |  2 +-
+ src/wmwinlist.h   |  2 +-
+ src/ybutton.cc    |  2 +-
+ src/ybutton.h     |  6 +++---
+ src/yconfig.cc    |  4 ++--
+ src/yfont.cc      |  8 ++++----
+ src/yfontcore.cc  |  8 ++++----
+ src/yfontxft.cc   | 16 ++++++++--------
+ src/yinput.cc     |  8 ++++----
+ src/yinputline.h  |  8 ++++----
+ src/ylabel.cc     |  8 ++++----
+ src/ylabel.h      |  8 ++++----
+ src/ylistbox.cc   |  4 ++--
+ src/ylistbox.h    |  2 +-
+ src/ymenu.cc      | 24 ++++++++++++------------
+ src/ymenu.h       | 16 ++++++++--------
+ src/ymenuitem.cc  |  8 ++++----
+ src/ymenuitem.h   | 12 ++++++------
+ src/ymsgbox.cc    |  4 ++--
+ src/ymsgbox.h     |  4 ++--
+ src/ypaint.cc     |  8 ++++----
+ src/ypaint.h      | 14 +++++++-------
+ src/ypaths.cc     |  2 +-
+ src/ytooltip.cc   |  4 ++--
+ src/ytooltip.h    |  8 ++++----
+ src/yurl.cc       | 16 ++++++++--------
+ src/yurl.h        |  6 +++---
+ src/ywindow.cc    |  2 +-
+ src/ywindow.h     |  2 +-
+ src/yximage.cc    |  6 +++---
+ 68 files changed, 266 insertions(+), 269 deletions(-)
+
+commit 7cfa58e03306fd019ad1af62b54c3ad74068d200
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Jul 7 18:22:40 2020 +0200
+
+    Simplify cstring.
+
+ src/aaddressbar.cc |  2 +-
+ src/amailbox.cc    |  2 +-
+ src/amailbox.h     |  2 +-
+ src/apppstatus.h   |  4 ++--
+ src/icehelp.cc     |  8 ++++----
+ src/mstring.h      | 56 ++++++++++++++++++++++++--------------------------
+ src/upath.h        |  2 +-
+ src/wmclient.cc    |  4 ++--
+ src/yfontcore.cc   |  4 ++--
+ src/yfontxft.cc    |  2 +-
+ src/yicon.cc       |  4 ++--
+ src/ypaint.cc      |  2 +-
+ src/ysocket.cc     |  2 +-
+ src/ysocket.h      |  2 +-
+ src/yxtray.h       |  2 +-
+ 15 files changed, 48 insertions(+), 50 deletions(-)
+
+commit 587c32a8b61e471e63fed966c1a33ce157bda0a8
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Jul 6 01:57:36 2020 +0200
+
+    Add check for dependencies.
+
+ rebuild.sh | 21 +++++++++++++++++++--
+ 1 file changed, 19 insertions(+), 2 deletions(-)
+
+commit 0baf9e3fb56e01d185c3c48cfaf80c0ca1aa3c7e
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Jul 6 01:56:47 2020 +0200
+
+    Document mailbox monitoring.
+
+ man/icewm.pod | 91 +++++++++++++++++++++++++++++++++++++++++++++++--------
+ 1 file changed, 78 insertions(+), 13 deletions(-)
+
+commit 9e1def49ce0ad8e4ad42e7884781f6906da7c878
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Jul 6 01:56:25 2020 +0200
+
+    Document "ignoreActivationMessages".
+
+ man/icewm-winoptions.pod | 1 +
+ 1 file changed, 1 insertion(+)
+
+commit d93f7f37e78ad74256038a4578b0578699acd81e
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Jul 6 01:55:38 2020 +0200
+
+    Fix for taskBarWidthPercentage in case screen is not at (0, 0).
+
+ src/wmtaskbar.cc | 12 ++++++++----
+ 1 file changed, 8 insertions(+), 4 deletions(-)
+
+commit 80bf1e4d68fe2ae9af4f14b17675596d74b4cc5c
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Jul 6 01:55:16 2020 +0200
+
+    Assume wordexp.
+
+ src/config.cmake.h.in | 1 -
+ src/wmapp.cc          | 3 ---
+ 2 files changed, 4 deletions(-)
+
+commit 3c77c45e0bcea57f0373dd1433716335a5b7533d
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Jul 6 01:53:47 2020 +0200
+
+    Add winoption "ignoreActivationMessages".
+
+ src/wmclient.cc  |  7 ++++---
+ src/wmframe.cc   | 34 +++++++++++++++++-----------------
+ src/wmframe.h    | 49 ++++++++++++++++++++++++-------------------------
+ src/wmmgr.cc     | 34 +++++++++++++++++-----------------
+ src/wmoption.cc  | 23 +++++++----------------
+ src/wmoption.h   |  4 ++--
+ src/wmswitch.cc  |  2 +-
+ src/wmwinlist.cc |  2 +-
+ src/wmwinmenu.cc |  2 +-
+ 9 files changed, 74 insertions(+), 83 deletions(-)
+
+commit 6831f6c363f80b6843b51f1ec1ace764b4922459
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Jul 6 01:46:49 2020 +0200
+
+    Prefer yad over zenity. Facilitate focus if icewm crashed. Support
+    terminal.
+
+ src/CMakeLists.txt |   3 +-
+ src/Makefile.am    |   2 +-
+ src/icesm.cc       | 240 ++++++++++++++++++++++++++++++++++++++++++-------
+ 3 files changed, 209 insertions(+), 36 deletions(-)
+
+commit 853d66f70c2a046df9700ecd27c0b4519ee65b66
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Jul 6 01:44:56 2020 +0200
+
+    Fix merging of hints for systray.
+
+ src/yxtray.cc | 4 ++--
+ 1 file changed, 2 insertions(+), 2 deletions(-)
+
+commit bdef893b9314aa74f93d1b41e2f1c22a6372be6e
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Jul 6 01:44:42 2020 +0200
+
+    Simplify casts.
+
+ src/ywindow.cc | 6 ++----
+ 1 file changed, 2 insertions(+), 4 deletions(-)
+
+commit 773e92d2aa15240e5b3defd9c988c4b186bb4bdb
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Jul 6 01:44:22 2020 +0200
+
+    Assume wordexp.
+
+ src/yicon.cc | 6 ------
+ 1 file changed, 6 deletions(-)
+
+commit 4386670bbc2cc2c13e7c627bce945e8397531012
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Jul 6 01:44:06 2020 +0200
+
+    Use wordexp to avoid a /bin/sh.
+
+ src/yapp.cc | 18 ++++++++++++++----
+ 1 file changed, 14 insertions(+), 4 deletions(-)
+
+commit 744d5e8ee2ecbf42e8a61212373ad56dbf60ea29
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Jul 6 01:42:52 2020 +0200
+
+    Use wordexp to avoid a /bin/sh.
+
+ src/wmapp.cc | 32 ++++++++++++++++++++++++++------
+ 1 file changed, 26 insertions(+), 6 deletions(-)
+
+commit a996fa5c7c519bd8ff71fe03302d02bada7c553a
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Jul 6 01:42:00 2020 +0200
+
+    Permit an optional equal sign for short option arguments.
+
+ src/misc.cc | 50 +++++++++++++++++++++++++-------------------------
+ 1 file changed, 25 insertions(+), 25 deletions(-)
+
+commit a4b5afda289e4ce8f5ba10754d30d4239eb411af
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Jul 6 01:40:41 2020 +0200
+
+    Catch X errors. Handle _NET_WM_USER_TIME.
+
+ src/icesh.cc | 101 ++++++++++++++++++++++++++++++++++++++++++-------------
+ 1 file changed, 78 insertions(+), 23 deletions(-)
