Add option to only show running net interfaces in status bar
NetStatusShowOnlyRunning, if enabled, will cause the status bar to check
for the IFF_RUNNING bit instead of the IFF_UP bit to determine if an
interface should be displayed in the status bar.

--- a/doc/icewm.adoc
+++ b/doc/icewm.adoc
@@ -1037,6 +1037,10 @@ List of battery names ignore.
 +
 Show CPU frequency in CPU status tool tip.
 
+* `NetStatusShowOnlyRunning = 0`
++
+Show network status for running devices only.
+
 * `TaskBarShowMEMStatus = 1`
 +
 Show memory usage status on task bar (Linux only).
