--- a/man/icewm-preferences.pod
+++ b/man/icewm-preferences.pod
@@ -512,7 +512,9 @@ Show CPU frequency in CPU status tool tip.
 
 =item B<NetStatusShowOnlyRunning>=0
 
-Show network status for running devices only.
+Show network status only for connected devices, such as an active ethernet link
+or associated wireless interface. If false, any network interface that has been
+brought up will be displayed.
 
 =item B<TaskBarShowMEMStatus>=1
 
