--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,339 @@
 # created with git log --stat=76 -M -C -500|fmt -sct -w80
 
+commit 4f5ab4b8819650929fbe768d22751efd76130f01
+Merge: 9175263b 721a1b20
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Wed Apr 28 00:25:48 2021 +0200
+
+    Merge branch 'icewm-1-4-BRANCH'
+
+commit 721a1b20d7b0eff45f0d6999b4664c76a3347ed9
+Merge: 56df42b9 5ca96880
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Wed Apr 28 00:24:18 2021 +0200
+
+    Merge remote-tracking branch 'upstream/icewm-1-4-BRANCH' into
+    icewm-1-4-BRANCH
+
+commit 5ca9688006e4072bd89c8e2a7f176f06c406be5c
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Apr 27 23:18:18 2021 +0200
+
+    Fix compiler warning about the C++ One Definition Rule.
+
+ src/wmsave.cc | 3 +--
+ 1 file changed, 1 insertion(+), 2 deletions(-)
+
+commit 118dbb4075709c3b26810ea84ea400f8be7c3965
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Apr 27 22:13:15 2021 +0200
+
+    Document default winoption format .OPTION.
+
+ man/icewm-winoptions.pod | 2 ++
+ 1 file changed, 2 insertions(+)
+
+commit 4ed379d29df94dc157394903042a6884cd9cf026
+Author: Ferdinand Galko <galko.ferdinand@gmail.com>
+Date:   Tue Apr 27 13:46:06 2021 +0000
+
+    Translated using Weblate (Slovak)
+
+    Currently translated at 100.0% (473 of 473 strings)
+
+ po/sk.po | 17 ++++-------------
+ 1 file changed, 4 insertions(+), 13 deletions(-)
+
+commit 2bc23d8dd87b1e269db7e781d01c9abacd20a824
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Apr 27 17:55:23 2021 +0200
+
+    Permit scroll wheel to control rolling up or down for issue #584.
+
+ man/icewm.pod  |  7 +++++--
+ src/wmtitle.cc | 10 ++++++++++
+ 2 files changed, 15 insertions(+), 2 deletions(-)
+
+commit 3d5c52aef4b0c4edaa457502b71e604afc5f738d
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Apr 27 17:36:06 2021 +0200
+
+    Remove superfluous cast and class qualifications.
+
+ src/ymenu.cc | 6 +++---
+ 1 file changed, 3 insertions(+), 3 deletions(-)
+
+commit 7747cd8391231beaba644c82d1cc22431f03967d
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Apr 27 17:35:05 2021 +0200
+
+    Correct type of all button preferences as unsigned.
+
+ src/default.h  | 10 +++++-----
+ src/wmmgr.cc   | 10 +++++-----
+ src/wmpref.cc  | 29 ++++++++++++++++++++++++++++-
+ src/wmtitle.cc | 10 +++++-----
+ 4 files changed, 43 insertions(+), 16 deletions(-)
+
+commit 6e66ef9cffc4ba151c3cf3b1af04bb1ca706228d
+Author: Freek de Kruijf <freek@opensuse.org>
+Date:   Tue Apr 27 10:14:07 2021 +0000
+
+    Translated using Weblate (Dutch)
+
+    Currently translated at 100.0% (473 of 473 strings)
+
+ po/nl.po | 43 +++++++++++++++++--------------------------
+ 1 file changed, 17 insertions(+), 26 deletions(-)
+
+commit f8cd7541853bcf47f9a1cba62b5e36d1d0b3eda9
+Author: Yasuhiko Kamata <belphegor@belbel.or.jp>
+Date:   Mon Apr 26 22:08:27 2021 +0000
+
+    Translated using Weblate (Japanese)
+
+    Currently translated at 100.0% (473 of 473 strings)
+
+ po/ja.po | 23 +++++++----------------
+ 1 file changed, 7 insertions(+), 16 deletions(-)
+
+commit 250adff966effedb0024231de5fce382ef5e89a1
+Author: Guillaume GARDET <guillaume.gardet@opensuse.org>
+Date:   Mon Apr 26 18:38:49 2021 +0000
+
+    Translated using Weblate (French)
+
+    Currently translated at 100.0% (473 of 473 strings)
+
+ po/fr.po | 43 +++++++++++++++++--------------------------
+ 1 file changed, 17 insertions(+), 26 deletions(-)
+
+commit 64c5c51008c2a91836c916ce40d9b0b1becfa91c
+Author: David Medina <medipas@gmail.com>
+Date:   Mon Apr 26 18:14:13 2021 +0000
+
+    Translated using Weblate (Catalan)
+
+    Currently translated at 100.0% (473 of 473 strings)
+
+ po/ca.po | 67 ++++++++++++++++++++++++++----------------------------------
+ 1 file changed, 29 insertions(+), 38 deletions(-)
+
+commit 3410d3b4b39d6c490f28d6f6b513c9a9781068af
+Merge: 154d649d c58040d8
+Author: openSUSE Weblate <weblate-noreply@opensuse.org>
+Date:   Mon Apr 26 17:30:54 2021 +0000
+
+    Merge branch 'origin/icewm-1-4-BRANCH' into Weblate.
+
+commit c58040d87234f7b63c3189ed43c5fa79c4362999
+Author: Ferdinand Galko <galko.ferdinand@gmail.com>
+Date:   Mon Apr 26 16:32:37 2021 +0000
+
+    Translated using Weblate (Slovak)
+
+    Currently translated at 100.0% (472 of 472 strings)
+
+ po/sk.po | 11 +++++------
+ 1 file changed, 5 insertions(+), 6 deletions(-)
+
+commit 154d649db266941052e2ed08fc379a2c4e361047
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Apr 26 19:30:41 2021 +0200
+
+    make update-po
+
+ po/ar.po     | 181 ++++++++++++++++++++++++++++-------------------------
+ po/be.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/bg.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/ca.po     | 181 ++++++++++++++++++++++++++++-------------------------
+ po/cs.po     | 181 ++++++++++++++++++++++++++++-------------------------
+ po/da.po     | 181 ++++++++++++++++++++++++++++-------------------------
+ po/de.po     | 181 ++++++++++++++++++++++++++++-------------------------
+ po/el.po     | 181 ++++++++++++++++++++++++++++-------------------------
+ po/en.po     | 168 ++++++++++++++++++++++++++------------------------
+ po/es.po     | 185 +++++++++++++++++++++++++++++--------------------------
+ po/fi.po     | 176 ++++++++++++++++++++++++++--------------------------
+ po/fr.po     | 181 ++++++++++++++++++++++++++++-------------------------
+ po/he.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/hr.po     | 168 ++++++++++++++++++++++++++------------------------
+ po/hu.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/icewm.pot | 170 ++++++++++++++++++++++++++------------------------
+ po/id.po     | 181 ++++++++++++++++++++++++++++-------------------------
+ po/it.po     | 181 ++++++++++++++++++++++++++++-------------------------
+ po/ja.po     | 181 ++++++++++++++++++++++++++++-------------------------
+ po/ko.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/lt.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/lv.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/mk.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/nb.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/nl.po     | 181 ++++++++++++++++++++++++++++-------------------------
+ po/no.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/pl.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/pt.po     | 177 ++++++++++++++++++++++++++++------------------------
+ po/pt_BR.po  | 181 ++++++++++++++++++++++++++++-------------------------
+ po/ro.po     | 168 ++++++++++++++++++++++++++------------------------
+ po/ru.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/sk.po     | 181 ++++++++++++++++++++++++++++-------------------------
+ po/sl.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/sv.po     | 181 ++++++++++++++++++++++++++++-------------------------
+ po/tr.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/uk.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/vi.po     | 172 ++++++++++++++++++++++++++-------------------------
+ po/zh_CN.po  | 181 ++++++++++++++++++++++++++++-------------------------
+ po/zh_TW.po  | 181 ++++++++++++++++++++++++++++-------------------------
+ 39 files changed, 3581 insertions(+), 3279 deletions(-)
+
+commit 23f0f10590b3f336def6285fe29dbca13be807bb
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Apr 26 19:28:53 2021 +0200
+
+    Add new icewm option --rewrite-preferences to update preferences.
+
+ man/icewm.pod      |  12 +-
+ src/CMakeLists.txt |   2 +-
+ src/Makefile.am    |   2 +
+ src/wmapp.cc       |  12 +-
+ src/wmconfig.cc    | 136 +++++++++++++++++++++
+ src/wmconfig.h     |   1 +
+ src/wmpref.cc      | 249 +-------------------------------------
+ src/wmpref.h       |  21 ----
+ src/wmsave.cc      | 323 +++++++++++++++++++++++++++++++++++++++++++++++++
+ src/wmsave.h       |  36 ++++++
+ src/yaction.h      |   6 +-
+ src/yconfig.cc     |  31 ++++-
+ src/yconfig.h      |  23 ++--
+ 13 files changed, 567 insertions(+), 287 deletions(-)
+
+commit 1d0fe7bc23ff7f38f5fe2bda34a417ac3e52b736
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Mon Apr 26 01:14:41 2021 +0200
+
+    Improve documentation for options for Super/Windows key modifiers.
+
+ man/icewm-preferences.pod | 11 ++++++++---
+ src/default.h             |  6 +++---
+ 2 files changed, 11 insertions(+), 6 deletions(-)
+
+commit d04adb3166ae7b27b95d51c47af368ed8595c4bd
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sun Apr 25 23:35:53 2021 +0200
+
+    Make the modifiers dependent on the type of QuickSwitch: either from
+    the Alt+Tab
+    or from the "switchkey" keyword for issue #583.
+
+ src/wmprog.cc   | 15 +++++++++++----
+ src/wmswitch.cc | 10 +++++++---
+ src/wmswitch.h  |  1 +
+ 3 files changed, 19 insertions(+), 7 deletions(-)
+
+commit da8fedb33ae42ee8aca3545c77c13d875ccdda1b
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sat Apr 24 15:28:17 2021 +0200
+
+    Don't reorder focus when Alt+Tabbing for issue #579.
+
+ src/wmswitch.cc | 2 +-
+ 1 file changed, 1 insertion(+), 1 deletion(-)
+
+commit 2df4083bfb52051d3f00716ef821bd9b028cc827
+Author: Panwar <caspian7pena@gmail.com>
+Date:   Thu Apr 22 14:41:10 2021 +0000
+
+    Translated using Weblate (Hindi)
+
+    Currently translated at 25.1% (85 of 338 strings)
+
+ po/hi.po | 6 +++---
+ 1 file changed, 3 insertions(+), 3 deletions(-)
+
+commit 46db04944f3afa03af72d787063fae7d9d2616d3
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Apr 20 01:07:51 2021 +0200
+
+    Defer loading internationalized help text until required.
+
+ src/base.h       |  5 +++--
+ src/genpref.cc   | 10 ++++++++--
+ src/icesh.cc     |  2 +-
+ src/icewmhint.cc |  2 +-
+ src/misc.cc      | 15 ++++++++++-----
+ 5 files changed, 23 insertions(+), 11 deletions(-)
+
+commit ed1b3058ad1a0be3e22fe51440f716d5925645c4
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Apr 20 00:50:18 2021 +0200
+
+    Add support for conditional expressions to icesh.
+
+ man/icesh.pod |  39 ++++++++
+ src/icesh.cc  | 266 +++++++++++++++++++++++++++++++++++-------------------
+ 2 files changed, 213 insertions(+), 92 deletions(-)
+
+commit 7c38247ded0cc53922eba86cdd15e6ff192ae160
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Fri Apr 16 16:03:42 2021 +0200
+
+    Add a toggle option "^" to the "netState" command for issue #580.
+
+ man/icesh.pod | 22 +++++++++++++++++++++-
+ src/icesh.cc  | 23 +++++++++++++++++++++--
+ 2 files changed, 42 insertions(+), 3 deletions(-)
+
+commit 9175263b5cc9845460c9ecb35f8012ce0db635a2
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Thu Apr 15 01:35:37 2021 +0200
+
+    Prepare 2.3.2 release
+
+ AUTHORS      |   4 +-
+ ChangeLog    | 705 +++++++++++++++++++++++++++----------------------------
+ NEWS         |  82 ++++---
+ README.md    |  36 +--
+ VERSION      |   2 +-
+ configure.ac |  10 +-
+ po/ar.po     |  62 ++---
+ po/be.po     |  62 ++---
+ po/bg.po     |  62 ++---
+ po/ca.po     |  62 ++---
+ po/cs.po     |  62 ++---
+ po/da.po     |  62 ++---
+ po/de.po     |  62 ++---
+ po/el.po     |  62 ++---
+ po/en.po     |  62 ++---
+ po/es.po     |  62 ++---
+ po/fi.po     |  66 +++---
+ po/fr.po     |  62 ++---
+ po/he.po     |  62 ++---
+ po/hr.po     |  62 ++---
+ po/hu.po     |  62 ++---
+ po/icewm.pot |  64 ++---
+ po/id.po     |  62 ++---
+ po/it.po     |  62 ++---
+ po/ja.po     |  62 ++---
+ po/ko.po     |  62 ++---
+ po/lt.po     |  62 ++---
+ po/lv.po     |  62 ++---
+ po/mk.po     |  62 ++---
+ po/nb.po     |  62 ++---
+ po/nl.po     |  62 ++---
+ po/no.po     |  62 ++---
+ po/pl.po     |  62 ++---
+ po/pt.po     |  62 ++---
+ po/pt_BR.po  |  62 ++---
+ po/ro.po     |  62 ++---
+ po/ru.po     |  62 ++---
+ po/sk.po     |  62 ++---
+ po/sl.po     |  62 ++---
+ po/sv.po     |  62 ++---
+ po/tr.po     |  62 ++---
+ po/uk.po     |  62 ++---
+ po/vi.po     |  62 ++---
+ po/zh_CN.po  |  62 ++---
+ po/zh_TW.po  |  62 ++---
+ 45 files changed, 1633 insertions(+), 1630 deletions(-)
+
 commit ec46c648ae768fc6d058b92ebe2abf0058b7f253
 Merge: 0ed7743b 56df42b9
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
@@ -6049,261 +6383,3 @@ Date:   Sun Sep 6 14:56:02 2020 +0200
 
  autogen.sh | 12 +++---------
  1 file changed, 3 insertions(+), 9 deletions(-)
-
-commit 8c0f2365dc94e36f66b84d6e58f2a38218afee07
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Sep 6 14:39:25 2020 +0200
-
-    Improve use of userhome in tilde_expansion.
-
- src/misc.cc | 11 +++++++----
- 1 file changed, 7 insertions(+), 4 deletions(-)
-
-commit efa64e8d67e6c766c44050994abccbbc2ac1d029
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Sep 6 14:38:36 2020 +0200
-
-    Solaris needs memset from string.h for FD_SET.
-
- src/yfileio.cc | 1 +
- 1 file changed, 1 insertion(+)
-
-commit f79e237ee0036e36b97e829fcecab7b6cc6bf5b7
-Author: Eduard Bloch <blade@debian.org>
-Date:   Sun Sep 6 12:48:24 2020 +0200
-
-    Extra control flow checking
-
- autogen.sh | 12 +++++++++---
- 1 file changed, 9 insertions(+), 3 deletions(-)
-
-commit 11ef3124fbba82bc0aa6110938c07f6c928679d0
-Author: Eduard Bloch <blade@debian.org>
-Date:   Sun Sep 6 11:53:46 2020 +0200
-
-    ~ expansion is modified by fakeroot, don't consider it
-
-    It deviates from $HOME. Tests on plain variables can be kept.
-
- src/strtest.cc | 15 ++++++++-------
- 1 file changed, 8 insertions(+), 7 deletions(-)
-
-commit 72794a99753f5392bebe6459be420bdb12c253d1
-Author: Eduard Bloch <blade@debian.org>
-Date:   Sun Sep 6 12:04:35 2020 +0200
-
-    Update apt index before installing dependencies
-
-    Or it will cause build failures when build agents were not refreshed
-    quick enough.
-
- .github/workflows/cmake.yml | 2 +-
- 1 file changed, 1 insertion(+), 1 deletion(-)
-
-commit 1f2780de0998f0c0127245dc51c4d31884cd23aa
-Author: Eduard Bloch <blade@debian.org>
-Date:   Thu Sep 3 18:19:08 2020 +0200
-
-    Rename LOGEVENTS option to follow existing pattern
-
-    Make it friendly to cmake-gui grouped view.
-
- src/CMakeLists.txt | 5 +++--
- 1 file changed, 3 insertions(+), 2 deletions(-)
-
-commit d46a7fde612314d348ce4fd91385f87b89157b85
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sat Sep 5 13:15:48 2020 +0200
-
-    Add userhome, dollar_expansion and tilde_expansion functions.
-    Let path_lookup also perform dollar_expansion and tilde_expansion.
-    In menuprog and menuprogreload do dollar_expansion and tilde_expansion.
-    Move event logging from misc.cc to its own file logevent.cc.
-
- src/CMakeLists.txt |  22 +-
- src/Makefile.am    |   3 +
- src/base.h         |  45 +---
- src/debug.h        |   8 +-
- src/default.h      |   1 +
- src/icesh.cc       |   1 +
- src/icesm.cc       |   1 -
- src/logevent.cc    | 514 ++++++++++++++++++++++++++++++++++++
- src/logevent.h     |  52 ++++
- src/misc.cc        | 699 ++++++++++++-------------------------------------
- src/strtest.cc     |  77 ++++++
- src/upath.cc       |   2 +-
- src/wmmenu.cc      |  13 +-
- src/wmmgr.cc       |   1 -
- src/ywindow.h      |   1 +
- src/yxapp.cc       |   2 +
- src/yxtray.cc      |   2 +-
- 17 files changed, 849 insertions(+), 595 deletions(-)
-
-commit de65cbb8c8c70c4dbf149fdd77ef327cbf094b35
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sat Sep 5 13:14:35 2020 +0200
-
-    Keep value of fTransientFor for later.
-
- src/wmclient.cc | 3 +--
- 1 file changed, 1 insertion(+), 2 deletions(-)
-
-commit 2cb1e847576c1f5f3880e925e669b36cadba6a82
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sat Sep 5 13:14:03 2020 +0200
-
-    Reduce LOC in read_pipe.
-
- src/yfileio.cc | 77 +++++++++++++++++++++++++-----------------------------
- 1 file changed, 35 insertions(+), 42 deletions(-)
-
-commit ba135aca19c3677a5384cbd5865ece30b47c7382
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sat Sep 5 13:12:43 2020 +0200
-
-    Remove unused set_nb.
-
- src/yfileio.h | 2 --
- 1 file changed, 2 deletions(-)
-
-commit 774fa29df31aa4a8acc4c04e91cf9cbd78d80c76
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Thu Sep 3 22:44:03 2020 +0200
-
-    Several fixes for reading from pipes with timeouts for issue #487.
-
- src/wmmenu.cc  |  35 ++++-----
- src/yfileio.cc | 217 +++++++++++++++++++++++++++--------------------------
- src/yfileio.h  |  69 +++++------------
- 3 files changed, 149 insertions(+), 172 deletions(-)
-
-commit 2b5b0d1c6d5d4293afdae9ba1e8d1d83db410ddf
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Thu Sep 3 22:43:13 2020 +0200
-
-    More comparison operators.
-
- src/ytime.h | 12 ++++++++++++
- 1 file changed, 12 insertions(+)
-
-commit d7297dae98347472b4a7a97e5ff66b585384edcf
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Thu Sep 3 22:41:45 2020 +0200
-
-    Add -C option for copyright.
-
- src/fdomenu.cc | 2 ++
- 1 file changed, 2 insertions(+)
-
-commit ca5c3b118df068ba527abacfb316afa79adb9889
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Thu Sep 3 22:40:04 2020 +0200
-
-    Add -C option for copyright.
-
- src/icesound.cc | 3 +++
- 1 file changed, 3 insertions(+)
-
-commit b422e3ad5fa9c9be30fd84687771a6179b5879a6
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Thu Sep 3 22:39:02 2020 +0200
-
-    Add -C option for copyright.
-
- src/icehelp.cc | 5 ++++-
- 1 file changed, 4 insertions(+), 1 deletion(-)
-
-commit cc97952eea45cd8419048f4bc20ff50af2cf8e44
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Thu Sep 3 22:36:44 2020 +0200
-
-    Add fsmart resize.
-
- src/ypointer.h | 10 +++++++++-
- 1 file changed, 9 insertions(+), 1 deletion(-)
-
-commit 82d76bdb9f3b4d87793a61e42df51f9786119e01
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Thu Sep 3 04:18:38 2020 +0200
-
-    Fix the inappropriate use of globals in the context of a dynamically
-    loaded configuration for #483.
-
- src/yicon.cc | 211 ++++++++++++++++++++++++-------------------------------
- 1 file changed, 93 insertions(+), 118 deletions(-)
-
-commit d56e16619928d7bccb8a9e14df0f204c6513a505
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Thu Sep 3 04:18:25 2020 +0200
-
-    Add find for YRefArray.
-
- src/yarray.h | 9 +++++++++
- 1 file changed, 9 insertions(+)
-
-commit 4520307a4e6b77acd6778e6b09e8936547881c63
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Thu Sep 3 02:01:24 2020 +0200
-
-    CMake support for LOGEVENTS.
-
- src/CMakeLists.txt    | 2 ++
- src/config.cmake.h.in | 3 ++-
- 2 files changed, 4 insertions(+), 1 deletion(-)
-
-commit ef359cbffd58294bf776f3d01fbb9abff20cc0c5
-Author: Hugo Carvalho <hugokarvalho@hotmail.com>
-Date:   Wed Sep 2 23:43:09 2020 +0100
-
-    Update Portuguese (pt) translations (#486)
-
-    * Update LINGUAS: Add pt.
-    * Add files via upload: Create and update portuguese translation (pt)
-    * Update icewm-session.desktop: Add Portuguese Name (pt).
-    * Update icewm.desktop: Add Portuguese (pt) Comment and fix typo in
-    English Comment "manager".
-
- lib/icewm-session.desktop |    1 +
- lib/icewm.desktop         |    3 +-
- po/LINGUAS                |    1 +
- po/pt.po                  | 2622 +++++++++++++++++++++++++++++++++++++++++
- 4 files changed, 2626 insertions(+), 1 deletion(-)
-
-commit d5d1dfd497df86801cf3a478bb38cf131510ca06
-Author: Hugo Carvalho <hugokarvalho@hotmail.com>
-Date:   Tue Aug 25 15:33:55 2020 +0000
-
-    Translated using Weblate (Portuguese)
-
-    Currently translated at 100.0% (469 of 469 strings)
-
- po/pt.po | 1137 +++++++++++++++++++++++++++++++++++-----------------------
- 1 file changed, 691 insertions(+), 446 deletions(-)
-
-commit cbbb32bcf31490d08cc77d4176a6fbae5d18220c
-Author: Eduard Bloch <blade@debian.org>
-Date:   Tue Sep 1 21:19:16 2020 +0200
-
-    Added strtest exection in ctest
-
- CMakeLists.txt     | 2 ++
- src/CMakeLists.txt | 2 ++
- 2 files changed, 4 insertions(+)
-
-commit 11edd35e3e841c8f7a01d6fb38630c1e4390f4f9
-Author: Eduard Bloch <blade@debian.org>
-Date:   Tue Sep 1 20:59:49 2020 +0200
-
-    More CI build configs with more and less features
-
- .github/workflows/cmake.yml | 69 ++++++++++++++++++++++++++++-------------
- 1 file changed, 47 insertions(+), 22 deletions(-)
-
-commit 200a35a24187d3cbde3af1090fbe82aec4071326
-Author: Eduard Bloch <blade@debian.org>
-Date:   Tue Sep 1 20:50:51 2020 +0200
-
-    Basic autoconf CI setup
-
- .github/workflows/cmake.yml | 59 ++++++++++++++++++++++++++++-------------
- 1 file changed, 40 insertions(+), 19 deletions(-)
