--- a/po/nl.po
+++ b/po/nl.po
@@ -6,11 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: icewm 1.2.23\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2021-04-26 19:30+0200\n"
+"POT-Creation-Date: 2021-04-28 00:27+0200\n"
 "PO-Revision-Date: 2021-04-27 12:57+0000\n"
 "Last-Translator: Freek de Kruijf <freek@opensuse.org>\n"
-"Language-Team: Dutch <https://l10n.opensuse.org/projects/icewm/"
-"icewm-1-4-branch/nl/>\n"
+"Language-Team: Dutch <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -478,8 +478,8 @@ msgstr ""
 "\n"
 "  -B                  Weergeeft de manual page van IceWM icewmbg.\n"
 "  -b, --bugs          Weergeeft de IceWM-bugreports (op primitieve wijze).\n"
-"  -f, --faq           Weergeeft de IceWM FAQ (veelgestelde vragen) en HOWTO."
-"\n"
+"  -f, --faq           Weergeeft de IceWM FAQ (veelgestelde vragen) en "
+"HOWTO.\n"
 "  -g                  Weergeeft de IceWM Github-website.\n"
 "  -i, --icewm         Weergeeft de man-pagina van IceWM icewm.\n"
 "  -m, --manual        Weergeeft de IceWM Manual (standaard).\n"
@@ -1595,11 +1595,11 @@ msgid "_About"
 msgstr "_Over"
 
 #
-#: src/wmframe.cc:1401
+#: src/wmframe.cc:1395
 msgid "Kill Client: "
 msgstr "Stoppen van: "
 
-#: src/wmframe.cc:1402
+#: src/wmframe.cc:1396
 msgid ""
 "WARNING! All unsaved changes will be lost when\n"
 "this client is killed. Do you wish to proceed?"
